# samplebrain

./: .#samplebrain.h  .#test.py  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dependencies.cmake  LICENSE  README.md  building.md  changelog.md  macos_build.sh  samplebrain.pro  test.cpp  transponge-mfcc.py
.github/workflows/: mirror.yaml  mirror.yml
app/: MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  audio_thread.cpp  audio_thread.h  feedback.cpp  feedback.h  process_thread.cpp  process_thread.h  qtmain.cpp  samplebrain.pro  samplebrain.qrc  sound_items.cpp  sound_items.h
app/gui/: samplebrain.ui  settings.ui
app/icon/: samplebrain-icon.icns
brain/: Makefile.in  configure  configure.ac  replace.py
brain/interface/: samplebrain.ui
brain/src/: block.cpp  block.h  block_source.h  block_stream.cpp  block_stream.h  brain.cpp  brain.h  config.h.in  fft.cpp  fft.h  main.cpp  mfcc.cpp  mfcc.h  pitchshift.cpp  pitchshift.h  renderer.cpp  renderer.h  search_params.cpp  search_params.h  status.cpp  status.h  window.cpp  window.h
brain/src/aquila/: LICENCE
brain/src/aquila/filter/: MelFilter.dep
brain/src/aquila/transform/: Dft.dep  FftFactory.dep  OouraFft.dep
brain/src/spiralcore/: OSC_server.cpp  OSC_server.h  allocator.cpp  allocator.h  audio.cpp  audio.h  command_ring_buffer.h  portaudio_client.cpp  portaudio_client.h  ring_buffer.cpp  sample.h  stream.h
build-aux/flatpak/: README.md  org.thentrythis.Samplebrain.yaml
cooking/ideas/: wav1.xcf  wav7.xcf
cooking/python/: magicsquares.py  samplebrain  transponge-eigen.py  transponge-gui.py  transponge-mfcc.py
cooking/sponge/: project.clj
cooking/sponge/local_mvn_repo/local/comirva/: maven-metadata-local.xml  maven-metadata-local.xml.sha1
cooking/sponge/local_mvn_repo/local/comirva/0.0.36/: comirva-0.0.36.pom  comirva-0.0.36.pom.sha1
cooking/sponge/local_mvn_repo/local/comirva/0.36/: comirva-0.36.jar.sha1  comirva-0.36.pom  comirva-0.36.pom.md5  comirva-0.36.pom.sha1
cooking/sponge/src/app/: aggregate.clj  blocklist.clj  core.clj  wav.clj
cooking/sponge/test/app/test/: aggregate.clj  block.clj  core.clj  listen.clj
debian/: README.Debian  README.source  changelog  control  copyright  files  install  rules
desktop/: CreateICNS.src  notes.txt  org.thentrythis.Samplebrain.metainfo.xml  samplebrain.desktop  samplebrain.desktop~  samplebrain.icns
docs/: manual.md
gui/: sample.ui  samplebrain.ui  settings.ui
python/: samplebrain  transponge-gui.py  transponge.py
samplebrain/: Makefile.in  configure  configure.ac  dist.sh
samplebrain/interface/: sample.ui  samplebrain.ui
samplebrain/qt/: MainWindow.cpp  MainWindow.h  Makefile  audio_thread.cpp  audio_thread.h  feedback.cpp  feedback.h  notes.txt  process_thread.cpp  process_thread.h  qtmain.cpp  samplebrain.pro  samplebrain.qrc  sound_items.cpp  sound_items.h
samplebrain/src/: block.cpp  block.h  block_stream.cpp  block_stream.h  brain.cpp  brain.h  brain_block.cpp  brain_block.h  config.h.in  fft.cpp  fft.h  libmfcc.cpp  libmfcc.h  main.cpp  mfcc.cpp  mfcc.h  pitchshift.h  realtime_renderer.cpp  realtime_renderer.h  renderer.cpp  renderer.h  search_params.h  status.cpp  status.h  window.cpp  window.h
samplebrain/src/aquila/filter/: MelFilter.dep  MelFilterBank.dep
samplebrain/src/aquila/transform/: Dct.cpp  Dct.dep
samplebrain/src/jellyfish/: OSC_server.cpp  audio.cpp  audio.h  command_ring_buffer.cpp  command_ring_buffer.h  fixed.h  portaudio_client.cpp  portaudio_client.h  ring_buffer.cpp  ring_buffer.h  sample.cpp  sample.h  stream.cpp  stream.h  types.h
server/: libmfcc.cpp  samplebrain.h
sponge/: README
sponge/local_mvn_repo/local/comirva/: maven-metadata-local.xml.md5
sponge/local_mvn_repo/local/comirva/0.0.36/: comirva-0.0.36.pom.md5
sponge/local_mvn_repo/local/comirva/0.36/: comirva-0.36.jar.md5
sponge/src/app/: block.clj  listen.clj
sponge/test/app/test/: blocklist.clj
